# Ray-Tracer

./: CMakeLists.txt  LiteMath.h  README.md  ShaderProgram.cpp  ShaderProgram.h  common.h  glad.c  main.cpp  readme.txt
cmake/Modules/: FindGLM.cmake
dependencies/include/GLAD/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
